--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev --turbopack",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
+
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -26,8 +26,7 @@
   "devDependencies": {
     "@types/node": "22.10.7",
     "@types/react": "19.0.7",
-    "@types/react-dom": "19.0.3",
-    "eslint": "^9.27.0",
-    "eslint-config-next": "15.3.2"
+    "@types/react-dom": "19.0.3"
+
   }
 }
